--- a/index.html
+++ b/index.html
@@ -772,8 +772,10 @@
                 ><svg class="checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-Checkbox"></use></svg
               ></span>
-              I accept the terms and conditions of the
-              <a class="privacy" href="">Privacy Policy</a></label
+              <span class="mobile-checkbox">
+                I accept the terms and conditions of the
+                <a class="privacy" href="">Privacy Policy</a></span
+              ></label
             >
           </div>
           <button class="modal-btn" type="submit">Send</button>
